[tool.poetry]
name = "upsolver-diag"
version = "0.1.0"
description = "Upsolver Iceberg Auditor CLI"
authors = ["Upsolver <developers@upsolver.com>"]
license = "MIT"
readme = "README.md"

packages = [
    {include = "icebergdiag"},
    ]

[tool.poetry.scripts]
upsolver-diag = 'icebergdiag.cli:cli_runner'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.31.0"
rich = "^13.7.0"
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = ">=1.25.4,<1.27"
pyiceberg = {extras = ["hive", "glue", "s3fs"], version = "^0.5.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
