[tool.poetry]
name = "iceberg-diag"
version = "0.1.3"
description = "Upsolver Iceberg Auditor CLI"
authors = ["Upsolver <developers@upsolver.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Upsolver/iceberg-diag"


packages = [
    {include = "icebergdiag"},
    ]

[tool.poetry.scripts]
iceberg-diag = 'icebergdiag.cli:cli_runner'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.31.0"
rich = "^13.7.0"
boto3 = "^1.34.0"
botocore = "^1.34.0"
pyiceberg = {extras = ["glue", "s3fs"], version = "^0.5.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
